--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <!--    Login page colors-->
+    <color name="login_background_grey">#343748</color>
+    <color name="login_button">#F36E70</color>
+
 </resources>
