--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#353748</color>
+    <color name="colorPrimaryDark">#353748</color>
     <color name="colorAccent">#D81B60</color>
 
     <!--    Login page colors-->
-    <color name="login_background_grey">#343748</color>
-    <color name="login_button">#F36E70</color>
+    <color name="aspire_blue">#5FB2EB</color>
+
 
 </resources>
