--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,40 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/aspireDarkPrimaryColor"
+    tools:context=".fragments.Dashboard">
 
-    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/aspireDarkPrimaryColor"
-        tools:context=".fragments.Dashboard">
+        android:layout_height="wrap_content"
+        android:id="@+id/dashboardCardsRecyclerView"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/dashboardCardsRecyclerView" />
+    <LinearLayout
+        android:id="@+id/loadingLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/loadingLayout"
+        <ProgressBar
+            android:indeterminateTint="#fff"
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:layout_marginStart="10dp"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal">
+            android:text="Loading, please wait..."
+            android:textColor="#fff"/>
+    </LinearLayout>
 
-            <ProgressBar
-                android:indeterminateTint="#fff"
-                android:layout_width="20dp"
-                android:layout_height="20dp" />
-
-            <TextView
-                android:layout_marginStart="10dp"
-                android:textSize="16sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Loading, please wait..."
-                android:textColor="#fff" />
-        </LinearLayout>
-
-    </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
