--- a/app/src/main/res/layout/expanded_categories_data_card.xml
+++ b/app/src/main/res/layout/expanded_categories_data_card.xml
@@ -41,7 +41,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$0.00"
-                android:textSize="20sp"
+                android:textSize="18sp"
+                android:singleLine="true"
                 android:textColor="#BF9938"
                 android:fontFamily="@font/open_sans_bold"
                 android:id="@+id/budgetedBalanceText_expandedCard" />
@@ -71,7 +72,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$0.00"
-                android:textSize="20sp"
+                android:textSize="18sp"
+                android:singleLine="true"
                 android:textColor="#3AC28F"
                 android:fontFamily="@font/open_sans_bold"
                 android:id="@+id/availableBalanceText_expandedCard" />
@@ -100,7 +102,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$0.00"
-                android:textSize="20sp"
+                android:singleLine="true"
+                android:textSize="18sp"
                 android:textColor="#CE7976"
                 android:fontFamily="@font/open_sans_bold"
                 android:id="@+id/spentBalanceText_expandedCard" />
