--- a/app/src/main/res/layout/expanded_dashboard_card.xml
+++ b/app/src/main/res/layout/expanded_dashboard_card.xml
@@ -48,7 +48,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="$0.00"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
+                    android:singleLine="true"
                     android:textColor="#BF9938"
                     android:fontFamily="@font/open_sans_bold"
                     android:id="@+id/budgetedBalanceText_expandedCard"/>
@@ -78,7 +79,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="$0.00"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
+                    android:singleLine="true"
                     android:textColor="#3AC28F"
                     android:fontFamily="@font/open_sans_bold"
                     android:id="@+id/availableBalanceText_expandedCard"/>
@@ -107,7 +109,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="$0.00"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
+                    android:singleLine="true"
                     android:textColor="#CE7976"
                     android:fontFamily="@font/open_sans_bold"
                     android:id="@+id/spentBalanceText_expandedCard"/>
