Completed Transactions functionality Structured Dashboard.java added version to sharedPref

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
 
     <!-- Dashboard -->
     <color name="dashboardCardColor">#424453</color>
+    <color name="inflow_green">#32AE7B</color>
+    <color name="outflow_red">#B22557</color>
 </resources>
